<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/dogContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:src="@drawable/dog"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dogsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/fragmentHomeDogTitle"
                        android:textColor="@color/primaryColor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dogsTagline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragmentHomeDogTagline"
                        android:textAlignment="textEnd"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintRight_toRightOf="@+id/dogsTitle"
                        app:layout_constraintTop_toBottomOf="@+id/dogsTitle"
                        app:lineHeight="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragmentHomeDogDescription"
                        android:textAlignment="textEnd"
                        android:textSize="13sp"
                        app:layout_constraintRight_toRightOf="@+id/dogsTitle"
                        app:layout_constraintTop_toBottomOf="@+id/dogsTagline" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/catContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:src="@drawable/cat"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/catsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/fragmentHomeCatTitle"
                        android:textColor="@color/primaryColor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/catsTagline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragmentHomeCatTagline"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintLeft_toLeftOf="@+id/catsTitle"
                        app:layout_constraintTop_toBottomOf="@+id/catsTitle"
                        app:lineHeight="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragmentHomeCatDescription"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="@+id/catsTitle"
                        app:layout_constraintTop_toBottomOf="@+id/catsTagline" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/otherContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/rabbit"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/othersTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/fragmentHomeOtherTitle"
                        android:textColor="@color/primaryColor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/othersTagline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragmentHomeOtherTagline"
                        android:textAlignment="textEnd"
                        android:textColor="@color/secondaryTextColor"
                        app:layout_constraintRight_toRightOf="@+id/othersTitle"
                        app:layout_constraintTop_toBottomOf="@+id/othersTitle"
                        app:lineHeight="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragmentHomeOtherDescription"
                        android:textAlignment="textEnd"
                        android:textSize="13sp"
                        app:layout_constraintRight_toRightOf="@+id/othersTitle"
                        app:layout_constraintTop_toBottomOf="@+id/othersTagline" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>